[package]
name = "cryo_parser"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
cryo_lexer = { version = "0.1.0", path = "../cryo_lexer" }
cryo_span = { version = "0.1.0", path = "../cryo_span" }
cryo_parser_proc_macro = { version = "0.1.0", path = "../cryo_parser_proc_macro" }
itertools = "0.14.0"
paste = "1.0.15"
internment = "0.8.6"
derive_more = { version = "2.0.1", features = ["from", "into"] }
extension-traits = "2.0.0"
